--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+	"mongoose": "^5.7.3"
   },
   "devDependencies": {
     "nodemon": "^1.19.3"
