--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# ----------------------------------------------------------------------------------------
+## BACKEND -------------------------------------------------------------------------------
+# ----------------------------------------------------------------------------------------
+
 # Logs
 logs
 *.log
@@ -30,14 +34,14 @@ bower_components
 .lock-wscript
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
+/build/Release
 
 # Dependency directories
-node_modules/
-jspm_packages/
+/backend/node_modules
+/backend/jspm_packages
 
 # TypeScript v1 declaration files
-typings/
+/backend/typings
 
 # Optional npm cache directory
 .npm
@@ -60,4 +64,31 @@ typings/
 # next.js build output
 .next
 
-backend/uploads/*.*
+#
+/backend/uploads/*.*
+
+# ----------------------------------------------------------------------------------------
+## FRONTEND ------------------------------------------------------------------------------
+# ----------------------------------------------------------------------------------------
+
+# dependencies
+/frontend/node_modules
+/frontend/.pnp
+.pnp.js
+
+# testing
+/frontend/coverage
+
+# production
+/frontend/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
