--- a/.gitignore
+++ b/.gitignore
@@ -34,14 +34,14 @@ bower_components
 .lock-wscript
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
-/build/Release
+build/Release
 
 # Dependency directories
-/backend/node_modules
-/backend/jspm_packages
+backend/node_modules
+backend/jspm_packages
 
 # TypeScript v1 declaration files
-/backend/typings
+backend/typings
 
 # Optional npm cache directory
 .npm
@@ -65,22 +65,22 @@ bower_components
 .next
 
 #
-/backend/uploads/*.*
+backend/uploads/*.*
 
 # ----------------------------------------------------------------------------------------
 ## FRONTEND ------------------------------------------------------------------------------
 # ----------------------------------------------------------------------------------------
 
 # dependencies
-/frontend/node_modules
-/frontend/.pnp
+frontend/node_modules
+frontend/.pnp
 .pnp.js
 
 # testing
-/frontend/coverage
+frontend/coverage
 
 # production
-/frontend/build
+frontend/build
 
 # misc
 .DS_Store
@@ -92,3 +92,19 @@ bower_components
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# ----------------------------------------------------------------------------------------
+## MOBILE --------------------------------------------------------------------------------
+# ----------------------------------------------------------------------------------------
+
+mobile/node_modules/**/*
+mobile/.expo/*
+mobile/npm-debug.*
+mobile/*.jks
+mobile/*.p8
+mobile/*.p12
+mobile/*.key
+mobile/*.mobileprovision
+mobile/*.orig.*
+mobile/web-build/
+mobile/web-report/
